--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
     background-size: cover;
 }
 
-.header .background {
+ .background {
     background-image: url("../img/icons/bg.jpg");
     height: 400px;
     z-index: -1;
@@ -63,4 +63,47 @@ body {
     padding: 40px;
     height: 100%;
     width: 100%;
+}
+.bottom-menu {
+    background: #e2e2e2;
+    color: #bcc3ca;
+    padding: 39px 0 42px;
+    margin: 150px 0 0 0;
+}
+.bottom-menu .navbar-brand {
+    font-size: 20px;
+    padding: 0;
+}
+.bottom-menu .title {
+    font-size: 13px;
+    font-weight: 700;
+    margin-top: 0;
+}
+
+.bottom-menu a {
+    color: inherit;
+}
+.active .bottom-menu a,
+.bottom-menu a:hover,
+.bottom-menu a:focus {
+    color: #e47054;
+    text-decoration: none;
+}
+
+.bottom-menu .bottom-links {
+    font-size: 14px;
+    line-height: 1.286;
+}
+.bottom-links{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.bottom-links li {
+    display: block;
+    float: left;
+    margin: 0 20px 0 0;
+}
+.collapse .navbar-collapse{
+    z-index: 999;
 }
